# antidistractor

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md
.firecrawl/: cg51-v2.json  cg51.json  search-chigua.json  search-chinese-nsfw.json
.superpowers/brainstorm/26208-1775284252/content/: clash-challenge.html  dashboard-mockup.html  ebpf-limitations.html  ebpf-performance.html  focus-website.html  intro.html  tech-choice.html  waiting.html
.superpowers/brainstorm/26208-1775284252/state/: server-stopped
antidistractor/: Cargo.toml
antidistractor-android/: gradle.properties  settings.gradle.kts
antidistractor-android/app/: build.gradle.kts
antidistractor-android/app/src/main/: AndroidManifest.xml
antidistractor-android/app/src/main/java/com/antidistractor/: AntidistractorApp.kt  BootReceiver.kt
antidistractor-android/app/src/main/java/com/antidistractor/blocker/: AppBlockerService.kt
antidistractor-android/app/src/main/java/com/antidistractor/model/: Blocklist.kt
antidistractor-android/app/src/main/java/com/antidistractor/server/: ControlServerService.kt
antidistractor-android/app/src/main/java/com/antidistractor/ui/: MainActivity.kt  ShieldActivity.kt
antidistractor-android/app/src/main/java/com/antidistractor/vpn/: DnsVpnService.kt
antidistractor-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
antidistractor-android/app/src/test/java/com/antidistractor/: BlocklistTest.kt
antidistractor-android/gradle/: libs.versions.toml
antidistractor-common/: Cargo.toml
antidistractor-common/src/: lib.rs
antidistractor-ebpf/: Cargo.toml
antidistractor-ebpf/src/: main.rs
antidistractor-ios/: INTEGRATION.md  Package.swift
antidistractor-ios/DeviceActivityMonitorExtension/: DeviceActivityMonitorExtension.swift
antidistractor-ios/ShieldConfigurationExtension/: ShieldConfigurationExtension.swift
antidistractor-ios/Sources/AntidistractorCore/: AntidistractorIOS.swift  AppPickerManager.swift  BlockingManager.swift  BlocklistStore.swift  ScheduleManager.swift
antidistractor-ios/Sources/AntidistractorServer/: ControlServer.swift
antidistractor-ios/Tests/AntidistractorCoreTests/: BlocklistStoreTests.swift
antidistractor/src/: app_blocker.rs  control_server.rs  ebpf.rs  main.rs  process_freezer.rs  test_ebpf.rs  ui.rs
antidistractor/src/macos/: app_watcher.rs  mod.rs  notifications.rs  pf_blocker.rs  process_utils.rs  screen_lock.rs
docs/: features.md  unix-socket-control-interface.md
docs/superpowers/plans/: 2026-04-04-antidistractor-mvp.md
docs/superpowers/specs/: 2026-04-04-antidistractor-design.md
scripts/: antidistractor-ctl  antidistractor-ctl-macos  antidistractor-guard.service  antidistractor-guard.sh  antidistractor.service  com.antidistractor.daemon.plist  com.antidistractor.screenlock.plist  enforce-lock-daemon.sh  enforce-lock-macos.sh  enforce-lock.service  enforce-lock.sh  override-backup.yaml
