[workspace]
members = [
    "antidistractor",
    "antidistractor-common",
]
# antidistractor-ebpf is Linux-only (requires eBPF toolchain).
# On Linux, build it separately: cargo build --package antidistractor-ebpf --target bpfel-unknown-none
# See Makefile for the full build workflow.
resolver = "2"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
debug = 2
strip = false
