[package]
name = "antidistractor"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.12.0", features = ["async_tokio"] }
antidistractor-common = { path = "../antidistractor-common", features = ["user"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
