[package]
name = "antidistractor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "antidistractor"
path = "src/main.rs"

[[bin]]
name = "test_ebpf"
path = "src/test_ebpf.rs"

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
antidistractor-common = { path = "../antidistractor-common", features = ["user"] }
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["events"] }
anyhow = "1.0"
env_logger = "0.10"
simplelog = "0.12"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
